--- a/manuscript/acc_form.Rmd
+++ b/manuscript/acc_form.Rmd
@@ -150,7 +150,7 @@ R version 4.1.3
 
 #### Libraries and dependencies used by the code
 
-tictoc (Version 1.0.1), mice (Version 3.14.0), dplyr (Version 1.0.8), parallel (Version 4.1.3), xlsx (Version 0.6.5), ggplot2 (Version 3.3.5), readstata13 (Version 0.10.0), boot (Version 1.3-28), MASS(Version 7.3-55).
+tictoc (Version 1.0.1), mice (Version 3.14.0), dplyr (Version 1.0.8), parallel (Version 4.1.3), xlsx (Version 0.6.5), ggplot2 (Version 3.3.5), readstata13 (Version 0.10.0), boot (Version 1.3-28), MASS(Version 7.3-55), scales (Version 1.2.1).
 
 <!--
 Include version numbers (e.g., version numbers for any R or Python packages used)
