--- a/acc_form.Rmd
+++ b/acc_form.Rmd
@@ -154,7 +154,7 @@ R 4.1.3
 
 #### Libraries and dependencies used by the code
 
-mice (3.14.0), dplyr (1.0.8), parallel (4.1.3), xlsx (0.6.5), ggplot2 (3.3.5), nnet (7.3-17), miscF (0.1-5), boot (1.3-28), MASS(7.3-55), scales (1.2.1) 
+mice (3.14.0), dplyr (1.0.8), parallel (4.1.3), xlsx (0.6.5), ggplot2 (3.3.5), nnet (7.3-17), miscF (0.1-5), boot (1.3-28), MASS (7.3-55), scales (1.2.1), table1 (1.4.2)
 
 <!--
 Include version numbers (e.g., version numbers for any R or Python packages used)
